CppLab/compiling_error.txt
E:\Archive\Code\SEM-4\OOPC\CppLab\Tut29.cpp: In function 'int main()':
E:\Archive\Code\SEM-4\OOPC\CppLab\Tut29.cpp:35:11: error: 'noskipws' was not declared in this scope
     file>>noskipws;
           ^~~~~~~~
E:\Archive\Code\SEM-4\OOPC\CppLab\Tut29.cpp:35:11: note: suggested alternative:
In file included from c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\ios:42:0,
                 from c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\ostream:38,
                 from c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\iostream:39,
                 from E:\Archive\Code\SEM-4\OOPC\CppLab\Tut29.cpp:1:
c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\ios_base.h:950:3: note:   'std::noskipws'
   noskipws(ios_base& __base)
   ^~~~~~~~
